--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
         "gathering/server.lua",
         "admin/server.lua",
         "fuel/server.lua",
-        "spawn/server.lua",
         "delivery/server.lua",
         "scoreboard/server.lua",
         "whitelist/server.lua",
@@ -35,6 +34,7 @@
         "transport/s_busstop.lua"
     ],
     "client_scripts": [
+        "accounts/client.lua",
         "hunger/client.lua",
         "worldtime/client.lua",
         "misc/client.lua",
@@ -45,6 +45,7 @@
         "garage/client.lua",
         "character/client.lua",
         "misc/json.lua",
+        "misc/cinematicui.lua",
         "housing/client.lua",
         "inventory/client.lua",
         "shops/client.lua",
@@ -53,7 +54,6 @@
         "admin/client.lua",
         "fuel/client.lua",
         "gps/client.lua",
-        "spawn/client.lua",
         "delivery/client.lua",
         "scoreboard/client.lua",
         "notification/client.lua",
